k8s.yaml
#########################################################
# Service for Moleculer API Gateway service
#########################################################
apiVersion: v1
kind: Service
metadata:
    name: api
spec:
    selector:
        app: api
    ports:
        - port: 3000
          targetPort: 3000

---
#########################################################
# Ingress for Moleculer API Gateway
#########################################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress
    #annotations:
    #  kubernetes.io/ingress.class: nginx
spec:
    rules:
        - host: my-project.127.0.0.1.nip.io
          http:
              paths:
                  - pathType: Prefix
                    path: /
                    backend:
                        service:
                            name: api
                            port:
                                number: 3000

---
#########################################################
# API Gateway service
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api
spec:
    selector:
        matchLabels:
            app: api
    replicas: 2
    template:
        metadata:
            labels:
                app: api
        spec:
            containers:
                - name: api
                  image: my-project
                  imagePullPolicy: IfNotPresent
---
#########################################################
# MongoDB server
#########################################################
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: mongo
    labels:
        app: mongo
spec:
    selector:
        matchLabels:
            app: mongo
    replicas: 1
    serviceName: mongo
    template:
        metadata:
            labels:
                app: mongo
        spec:
            containers:
                - image: mongo
                  name: mongo
                  ports:
                      - containerPort: 27017
                  resources: {}
                  volumeMounts:
                      - mountPath: /data/db
                        name: mongo-data
            volumes:
                - name: mongo-data
                  persistentVolumeClaim:
                      claimName: mongo-data

---
#########################################################
# MongoDB service
#########################################################
apiVersion: v1
kind: Service
metadata:
    name: mongo
    labels:
        app: mongo
spec:
    ports:
        - port: 27017
          targetPort: 27017
    selector:
        app: mongo

---
#########################################################
# NATS transporter service
#########################################################
apiVersion: v1
kind: Service
metadata:
    name: nats
spec:
    selector:
        app: nats
    ports:
        - port: 4222
          name: nats
          targetPort: 4222

---
#########################################################
# NATS transporter
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nats
spec:
    selector:
        matchLabels:
            app: nats
    replicas: 1
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                app: nats
        spec:
            containers:
                - name: nats
                  image: nats
                  args: ["-js"]
                  ports:
                      - containerPort: 4222
                        name: nats

---
#########################################################
# Redis service
#########################################################
apiVersion: v1
kind: Service
metadata:
    name: redis
spec:
    selector:
        app: redis
    ports:
        - port: 6379
          name: redis
          targetPort: 6379

---
#########################################################
# Redis server (transporter/cacher)
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis
spec:
    selector:
        matchLabels:
            app: redis
    replicas: 1
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                app: redis
        spec:
            containers:
                - name: redis
                  image: redis
                  ports:
                      - containerPort: 6379
                        name: redis
